# practice-backend

./: .env  README.md  pyproject.toml
src/app/: main.py
src/app/core/: config.py  database.py
